--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ bower_components
 build/Release
 
 # Dependency directories
+
 node_modules/
 jspm_packages/
 
@@ -73,6 +74,7 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
+*.env
 .env
 .env.development.local
 .env.test.local
