--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.3",
+    "postcss": "^8.4.41",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss": "^3.4.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
