--- a/backend/package.json
+++ b/backend/package.json
@@ -3,16 +3,17 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.11.0"
   },
   "name": "jes-first-site",
   "version": "1.0.0",
   "main": "app.js",
   "bin": {
-    "login-lecture": "bin/www.js"
+    "login-lecture": "bin/www.ts"
   },
   "scripts": {
-    "start": "nodemon ./bin/www.js",
+    "start": "nodemon ./bin/www.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
