--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.0"
   },
@@ -10,10 +13,10 @@
   "version": "1.0.0",
   "main": "app.js",
   "bin": {
-    "login-lecture": "bin/www.ts"
+    "login-lecture": "bin/www.js"
   },
   "scripts": {
-    "start": "nodemon ./bin/www.ts",
+    "start": "node ./bin/www.js",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,9 +27,6 @@
     "@types/express": "^4.17.21",
     "@types/node": "^22.2.0",
     "express": "^4.19.2",
-    "nodemon": "^3.1.4",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.5.4"
+    "nodemon": "^3.1.4"
   }
 }
