feat: nginx https 설정

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,10 +12,25 @@ http {
     sendfile        on; # Nginx가 파일을 전송할 때 커널 수준에서 파일 전송을 최적화
     keepalive_timeout  65; # 클라이언트와 서버간의 TCP 연결을 유지시간
 
-    # 여기에 server 블록을 정의합니다.
+    # HTTP(80)를 HTTPS(443)로 리디렉션
     server {
         listen 80;
-        server_name localhost;
+        server_name impig.site www.impig.site;
+
+        # 모든 HTTP 요청을 HTTPS로 리디렉션
+        return 301 https://$host$request_uri;
+    }
+
+    # HTTPS 설정
+    server {
+        listen 443 ssl;
+        server_name impig.site www.impig.site;
+
+        # SSL 인증서 경로 (Let's Encrypt)
+        ssl_certificate /etc/letsencrypt/live/impig.site/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/impig.site/privkey.pem;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
         # 프론트엔드 정적 파일 제공
         location / {
