--- a/.gitignore
+++ b/.gitignore
@@ -77,8 +77,10 @@ web_modules/
 *.env
 .env
 .env.development.local
+.env.development
 .env.test.local
 .env.production.local
+.env.production
 .env.local
 
 # parcel-bundler cache (https://parceljs.org/)
