feat: nginx https 설정

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -12,6 +12,16 @@ dist
 dist-ssr
 *.local
 
+*.env
+.env
+.env.development.local
+.env.development
+.env.test.local
+.env.production.local
+.env.production
+.env.local
+
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
