--- a/nginx.conf
+++ b/nginx.conf
@@ -20,35 +20,34 @@ http {
         # 모든 HTTP 요청을 HTTPS로 리디렉션
         return 301 https://$host$request_uri;
     }
+    # # HTTPS 설정
+    # server {
+    #     listen 443 ssl;
+    #     server_name impig.site www.impig.site;
 
-    # HTTPS 설정
-    server {
-        listen 443 ssl;
-        server_name impig.site www.impig.site;
+    #     # SSL 인증서 경로 (Let's Encrypt)
+    #     ssl_certificate /etc/letsencrypt/live/impig.site/fullchain.pem;
+    #     ssl_certificate_key /etc/letsencrypt/live/impig.site/privkey.pem;
+    #     include /etc/letsencrypt/options-ssl-nginx.conf;
+    #     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-        # SSL 인증서 경로 (Let's Encrypt)
-        ssl_certificate /etc/letsencrypt/live/impig.site/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/impig.site/privkey.pem;
-        include /etc/letsencrypt/options-ssl-nginx.conf;
-        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    #     # 프론트엔드 정적 파일 제공
+    #     location / {
+    #         root /usr/share/nginx/html;
+    #         try_files $uri $uri/ /index.html;
+    #     }
 
-        # 프론트엔드 정적 파일 제공
-        location / {
-            root /usr/share/nginx/html;
-            try_files $uri $uri/ /index.html;
-        }
-
-        # API 요청 처리 (백엔드로 프록시)
-        location /api/ {
-            rewrite ^/api(.*) $1 break; # '/api/ 접두사를 제거하고 나머지 부분을 경로를 재설정하여
-            proxy_pass http://backend:5000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            add_header 'Access-Control-Allow-Origin' '*'; # 모든 도메인 허용
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type';
-        }
-    }
+    #     # API 요청 처리 (백엔드로 프록시)
+    #     location /api/ {
+    #         rewrite ^/api(.*) $1 break; # '/api/ 접두사를 제거하고 나머지 부분을 경로를 재설정하여
+    #         proxy_pass http://backend:5000;
+    #         proxy_set_header Host $host;
+    #         proxy_set_header X-Real-IP $remote_addr;
+    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #         proxy_set_header X-Forwarded-Proto $scheme;
+    #         add_header 'Access-Control-Allow-Origin' '*'; # 모든 도메인 허용
+    #         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+    #         add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type';
+    #     }
+    # }
 }
