feat: nginx https 설정

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,15 +12,32 @@ http {
     sendfile        on; # Nginx가 파일을 전송할 때 커널 수준에서 파일 전송을 최적화
     keepalive_timeout  65; # 클라이언트와 서버간의 TCP 연결을 유지시간
 
-    # HTTP(80)를 HTTPS(443)로 리디렉션
+    # 여기에 server 블록을 정의합니다.
     server {
         listen 80;
-        server_name impig.site www.impig.site;
+        server_name impig.site;
 
-        # 모든 HTTP 요청을 HTTPS로 리디렉션
-        return 301 https://$host$request_uri;
+        # 프론트엔드 정적 파일 제공
+        location / {
+            root /usr/share/nginx/html;
+            try_files $uri $uri/ /index.html;
+        }
+
+        # API 요청 처리 (백엔드로 프록시)
+        location /api/ {
+            rewrite ^/api(.*) $1 break; # '/api/ 접두사를 제거하고 나머지 부분을 경로를 재설정하여
+            proxy_pass http://backend:5000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            add_header 'Access-Control-Allow-Origin' '*'; # 모든 도메인 허용
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type';
+        }
     }
-    # # HTTPS 설정
+
+    # HTTPS 설정
     # server {
     #     listen 443 ssl;
     #     server_name impig.site www.impig.site;
