--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ user nginx; # user라는 사용자 계정 사용
 worker_processes auto; # 워커 프로세스의 수를 설정
 
 events {
-    worker_connections 1024;  # 각 워커 프로세스당 최대 연결 수
+	 worker_connections 1024;  # 각 워커 프로세스당 최대 연결 수
 }
 
 http {
@@ -15,56 +15,47 @@ http {
     # 여기에 server 블록을 정의합니다.
     server {
         listen 80;
-        server_name impig.site;
+        server_name impig.site www.impig.site;
 
-        # 프론트엔드 정적 파일 제공
-        location / {
-            root /usr/share/nginx/html;
-            try_files $uri $uri/ /index.html;
-        }
+	location /.well-known/acme-challenge/ {
+		root /var/www/certbot;
+	}
+	location / {
+		return 301 https://$host$request_uri;
+	}
 
-        # API 요청 처리 (백엔드로 프록시)
-        location /api/ {
-            rewrite ^/api(.*) $1 break; # '/api/ 접두사를 제거하고 나머지 부분을 경로를 재설정하여
-            proxy_pass http://backend:5000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            add_header 'Access-Control-Allow-Origin' '*'; # 모든 도메인 허용
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type';
-        }
     }
 
     # HTTPS 설정
-    # server {
-    #     listen 443 ssl;
-    #     server_name impig.site www.impig.site;
+    
+    server {
+	 listen 443 ssl default_server;
+	 server_name impig.site www.impig.site;
+	 root /usr/share/nginx/html;
+	 #  SSL 인증서 경로 (Let's Encrypt)
+	 ssl_certificate /etc/letsencrypt/live/impig.site/fullchain.pem;
+	 ssl_certificate_key /etc/letsencrypt/live/impig.site/privkey.pem;
+	 ssl_trusted_certificate /etc/letsencrypt/live/impig.site/chain.pem;
 
-    #     # SSL 인증서 경로 (Let's Encrypt)
-    #     ssl_certificate /etc/letsencrypt/live/impig.site/fullchain.pem;
-    #     ssl_certificate_key /etc/letsencrypt/live/impig.site/privkey.pem;
-    #     include /etc/letsencrypt/options-ssl-nginx.conf;
-    #     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+	 ssl_protocols TLSv1.2 TLSv1.3;
+	 ssl_prefer_server_ciphers on;
+         # 프론트엔드 정적 파일 제공
+	 location / {
+		 try_files $uri $uri/ /index.html;
+	 }
 
-    #     # 프론트엔드 정적 파일 제공
-    #     location / {
-    #         root /usr/share/nginx/html;
-    #         try_files $uri $uri/ /index.html;
-    #     }
-
-    #     # API 요청 처리 (백엔드로 프록시)
-    #     location /api/ {
-    #         rewrite ^/api(.*) $1 break; # '/api/ 접두사를 제거하고 나머지 부분을 경로를 재설정하여
-    #         proxy_pass http://backend:5000;
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #         add_header 'Access-Control-Allow-Origin' '*'; # 모든 도메인 허용
-    #         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-    #         add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type';
-    #     }
-    # }
+         # API 요청 처리 (백엔드로 프록시)
+	 location /api/ {
+		rewrite ^/api(.*) $1 break; # '/api/ 접두사를 제거하고 나머지 부분을 경로를 재설정하여
+		proxy_pass http://backend:5000;
+		proxy_set_header Host $host;
+	 	proxy_set_header X-Real-IP $remote_addr;
+	  	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	  	proxy_set_header X-Forwarded-Proto $scheme;
+	  	add_header 'Access-Control-Allow-Origin' '*'; # 모든 도메인 허용
+	  	add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+	  	add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type';
+	  	proxy_redirect http:// $scheme://;	     
+		}	 
+	}    
 }
