feat: Jenkins 설정

--- a/nginx.conf
+++ b/nginx.conf
@@ -55,7 +55,13 @@ http {
 	  	add_header 'Access-Control-Allow-Origin' '*'; # 모든 도메인 허용
 	  	add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
 	  	add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type';
-	  	proxy_redirect http:// $scheme://;	     
-		}	 
-	}    
+	}	 
+	location /jenkins/ {
+		proxy_pass http://jenkins:8080;
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto $scheme;
+	}
+    }
 }
