--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,19 @@ services:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
 
+  jenkins:
+    image: jenkins/jenkins
+    container_name: jenkins
+    ports:
+      - "8080:8080" #Jenkins UI 접근포트
+      - "50000:50000"
+    environment:
+      - JENKINS_OPTS=--prefix=/jenkins
+    volumes:
+      - jenkins_home:/var/jenkins_home
+    mem_limit: 512m
+    networks:
+      - backend-network
 # 네트워크 설정: backend-network라는 이름의 브리지 네트워크를 정의
 networks:
   backend-network:
@@ -74,3 +87,4 @@ networks:
 # MySQL 데이터를 호스트에 영구 저장하기 위한 볼륨 설정
 volumes:
   mysql_data:
+  jenkins_home:
