--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,15 @@
   "dependencies": {
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-node-resolve": "^15.3.0",
+    "@types/fabric": "^5.3.9",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.3",
+    "fabric": "^6.5.0",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "rollup": "^4.25.0",
+    "react-router-dom": "^6.28.0",
+    "rollup": "^4.27.2",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.9"
   },
