feat: Jenkins 설정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,7 @@ services:
       - backend
     networks:
       - backend-network
+      - jenkins-network
     command: 'nginx -g "daemon off;" -c /etc/nginx/nginx.conf'
 
   certbot:
