--- a/nginx.conf
+++ b/nginx.conf
@@ -45,17 +45,17 @@ http {
 	 }
 
          # API 요청 처리 (백엔드로 프록시)
-	 location /api/ {
-		rewrite ^/api(.*) $1 break; # '/api/ 접두사를 제거하고 나머지 부분을 경로를 재설정하여
-		proxy_pass http://backend:5000;
-		proxy_set_header Host $host;
-	 	proxy_set_header X-Real-IP $remote_addr;
-	  	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-	  	proxy_set_header X-Forwarded-Proto $scheme;
-	  	add_header 'Access-Control-Allow-Origin' '*'; # 모든 도메인 허용
-	  	add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-	  	add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type';
-	}	 
+	#  location /api/ {
+	# 	rewrite ^/api(.*) $1 break; # '/api/ 접두사를 제거하고 나머지 부분을 경로를 재설정하여
+	# 	proxy_pass http://backend:5000;
+	# 	proxy_set_header Host $host;
+	#  	proxy_set_header X-Real-IP $remote_addr;
+	#   	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	#   	proxy_set_header X-Forwarded-Proto $scheme;
+	#   	add_header 'Access-Control-Allow-Origin' '*'; # 모든 도메인 허용
+	#   	add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+	#   	add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Accept, Content-Type';
+	# }	 
 	location /jenkins/ {
 		proxy_pass http://jenkins:8080;
 		proxy_set_header Host $host;
