--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,8 +54,8 @@ services:
       - ./data/certbot/conf:/etc/letsencrypt #공유 볼륨
       - ./data/certbot/www:/var/www/certbot #공유 볼륨
       - ./nginx/logs:/var/log/nginx
-    depends_on:
-      - backend
+    # depends_on:
+    # - backend
     networks:
       - backend-network
       - jenkins-network
@@ -89,5 +89,5 @@ networks:
 
 # MySQL 데이터를 호스트에 영구 저장하기 위한 볼륨 설정
 volumes:
-  mysql_data:
+  # mysql_data:
   jenkins_home:
