--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "postcss": "^8.4.41",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
     "rollup": "^4.27.2",
     "tailwind-scrollbar": "^3.1.0",
