--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,15 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.3",
     "fabric": "^6.5.0",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
     "rollup": "^4.27.2",
+    "socket.io-client": "^4.8.1",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.9"
   },
@@ -38,6 +41,7 @@
     "@storybook/react": "^8.4.2",
     "@storybook/react-vite": "^8.4.2",
     "@storybook/test": "^8.4.2",
+    "@types/file-saver": "^2.0.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
